style(youtube-player): update player header styles

--- a/src/app/components/youtube-player/youtube-player.component.sass
+++ b/src/app/components/youtube-player/youtube-player.component.sass
@@ -61,7 +61,7 @@
     display: flex
     align-items: center
     justify-content: space-between
-    padding: 1.5rem 1.5rem 0.5rem 1.5rem
+    padding: 1.5rem 1.5rem 0.5rem 1.5rem // Match visual spacing
     cursor: move
     user-select: none
     
