feat: add unit tests for tasks and update dock active state for tasks button

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
   <app-tasks *ngIf="isTasksVisible" cdkDrag></app-tasks>
 
   <!-- Dock -->
-  <app-dock [isTimerActive]="isTimerVisible" [isTimerRunning]="isTimerRunning" [isMuted]="isMuted"
-    (toggleTimer)="toggleTimerVisibility()" (toggleMute)="toggleMute()"
+  <app-dock [isTimerActive]="isTimerVisible" [isTimerRunning]="isTimerRunning" [isTasksActive]="isTasksVisible"
+    [isMuted]="isMuted" (toggleTimer)="toggleTimerVisibility()" (toggleMute)="toggleMute()"
     (toggleTasks)="toggleTasksVisibility()"></app-dock>
 </div>
