--- a/src/app/components/dock/dock.component.html
+++ b/src/app/components/dock/dock.component.html
@@ -17,7 +17,7 @@
         <span class="material-symbols-rounded" [class.oscillate]="isTimerRunning">timer</span>
     </button>
 
-    <button class="dock-item app-icon" (click)="onTasksClick()" title="Tasks">
+    <button class="dock-item app-icon" [class.active]="isTasksActive" (click)="onTasksClick()" title="Tasks">
         <span class="material-symbols-rounded">check_circle</span>
     </button>
 
