feat: display task type in task list

--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -18,6 +18,7 @@
                 <div class="task-title">{{ task.title }}</div>
                 <div class="task-meta">
                     <span class="category-badge" *ngIf="task.category">{{ task.category }}</span>
+                    <span class="type-badge">{{ task.type }}</span>
                     <span class="pomodoros">{{ task.pomodoros }} <span
                             class="material-symbols-rounded">timer</span></span>
                 </div>
