--- a/src/app/components/tasks/tasks.component.sass
+++ b/src/app/components/tasks/tasks.component.sass
@@ -129,6 +129,13 @@
     border-radius: 4px
     font-size: 0.7rem
 
+  .type-badge
+    background: rgba(255, 107, 0, 0.2)
+    color: #ff9f43
+    padding: 2px 6px
+    border-radius: 4px
+    font-size: 0.7rem
+
   .pomodoros
     display: flex
     align-items: center
