feat: move task action buttons to bottom of task item

--- a/src/app/components/tasks/tasks.component.sass
+++ b/src/app/components/tasks/tasks.component.sass
@@ -231,6 +231,9 @@
 .task-actions
   display: flex
   gap: 4px
+  width: 100%
+  justify-content: flex-end
+  margin-top: 8px
 
 .action-btn
   background: none
